# BraumChatAPI

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0b9f4f0f6b4a_add_workspace_invites.py  2c9a0d4c1e77_add_friends_and_requests.py  4f3d2c1a9e10_add_username_to_users.py  5a4f3d2b1c11_add_discord_style_display_name.py  7c1c8b3a5ab0_add_dm_and_sessions.py  891fb89f1e3b_create_core_tables.py  c3d2e1f0a9b8_backfill_display_name_handles_again.py
braumchat_api/: __init__.py  config.py  main.py
braumchat_api/api/: deps.py
braumchat_api/db/: redis.py  session.py
braumchat_api/models/: __init__.py  channel.py  channel_member.py  direct_message.py  direct_message_thread.py  friend.py  friend_request.py  message.py  user.py  user_session.py  workspace.py  workspace_invite.py  workspace_member.py
braumchat_api/observability/: metrics.py  middleware.py
braumchat_api/realtime/: manager.py
braumchat_api/schemas/: auth.py  channel.py  direct_message.py  friend.py  invite.py  message.py  user.py  workspace.py
braumchat_api/security/: client.py  http_rate_limit_middleware.py  rate_limit.py  security.py
braumchat_api/services/: auth_service.py  (+10 more)
frontend/: .dockerignore  .gitignore  Dockerfile  index.html  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
scripts/: wait-for-db-and-migrate.sh
tests/: conftest.py  test_acl.py  test_auth.py  test_direct_messages.py  test_presence_service.py  test_session_service.py
(+187 files in other folders)
